[package]
name = "center_of_the_world"
version = "0.1.0"
authors = [""]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.57"
wasm-bindgen = "0.2.80"
image = "0.24.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageBitmap',
  'ImageData',
]
